feat: Detailed stack traces are logged when unexpected exceptions are thrown feat: Add /valorant roll command fix: all known issues with Selection Parameter